--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,3 +57,14 @@
     -webkit-appearance: none;
   }
 }
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
